--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   mqtt_client: ^9.6.7
   font_awesome_flutter: ^10.1.0
   path_provider: ^2.0.9
+  sqflite: ^2.0.2+1
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
